[gd_scene load_steps=2 format=3 uid="uid://biaef0esevaxx"]

[ext_resource type="Script" uid="uid://cxuywdyh7jwtb" path="res://Scripts/experiments.gd" id="1_b803i"]

[node name="Customizations" type="Node2D"]
script = ExtResource("1_b803i")

[node name="Leave" type="Button" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 25
text = "Back
<<"

[connection signal="pressed" from="Leave" to="." method="_on_leave_pressed"]
